<resources>
    <string name="app_name">Birthday</string>
    <string name="give_me_star">Give Me Star</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="me">Me</string>
    <string name="system">System</string>
    <string name="contact">Contact</string>
    <string name="prompt_username">Enter your username</string>
    <string name="prompt_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="add_contact">Add Contact</string>
    <string name="name">Name</string>
    <string name="telephone">Telephone</string>
    <string name="group">Group</string>
    <string name="birthday">Birthday</string>
    <string name="description">Description</string>
    <string name="nothing" />
    <string name="select_group">Select or Create</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="no_group_yet">There is no group to select, Create new one?</string>
    <string name="group_name">Group Name</string>
    <string name="success">Success</string>
    <string name="select">Select</string>
    <string name="fail_to_load_image">Fail to load image</string>
    <string name="result">Result</string>
    <string name="fail_to_add_contact">Fail</string>
    <string name="name_is_empty">Name is empty</string>
    <string name="lunar">Lunar</string>
    <string name="title_activity_setting">SettingActivity</string>


    <string name="general_settings">Setting</string>
    <string name="other">Other</string>
    <string name="group_loading">Group is loading</string>
    <string name="all">All</string>
    <string name="create_group">Create new group</string>
    <string name="range_front">In</string>
    <string name="range_behind">Days</string>


    <string name="give_favor">sfe</string>
    <string name="give_favor_key">sfewfew</string>
    <string name="advice_feedback">wefew</string>
    <string name="advice_feedback_key">sdfew</string>
    <string name="backup_local_summary">werwefd</string>
    <string name="backup_local">werdsfsd</string>
    <string name="backup_local_key">gedvdv</string>
    <string name="bind_ever_note">wsdfdsf</string>
    <string name="ever_note_account_key">wedfsxdf</string>
    <string name="card_note_item_layout">wefdsxcv</string>
    <string name="card_note_item_layout_key">wefewxcvd</string>
    <string name="right_hand_mode_summary">wefwef</string>
    <string name="right_hand_mode">sdfsdfsf</string>
    <string name="key_alert_time">preference_key_alert_time</string>
    <string name="key_first_alert">preference_key_first_alert</string>

</resources>
