<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.jenzz.materialpreference.PreferenceCategory android:title="@string/general_settings">
        <com.jenzz.materialpreference.SwitchPreference
            android:key="preference_key_remind_the_same_day"
            android:summary="@string/right_hand_mode_summary"
            android:summaryOff="scened"
            android:summaryOn="fewf"
            android:title="@string/right_hand_mode" />
        <com.jenzz.materialpreference.CheckBoxPreference
            android:key="@string/card_note_item_layout_key"
            android:title="@string/card_note_item_layout" />
        <com.jenzz.materialpreference.Preference
            android:key="@string/ever_note_account_key"
            android:title="@string/bind_ever_note" />
        <com.jenzz.materialpreference.Preference
            android:key="@string/backup_local_key"
            android:summary="@string/backup_local_summary"
            android:title="@string/backup_local" />

        <com.jenzz.materialpreference.ListPreference
            android:key="list_preferenc"
            android:summary="一个使用了列表对话框的例子"
            android:title="请选择一项"
            app:mpentries="@array/entries_list_preference"
            app:mpentryValues="@array/entryvalues_list_preference" />

    </com.jenzz.materialpreference.PreferenceCategory>

    <com.jenzz.materialpreference.PreferenceCategory android:title="@string/other">
        <com.jenzz.materialpreference.Preference
            android:key="@string/advice_feedback_key"
            android:title="@string/advice_feedback" />
        <com.jenzz.materialpreference.Preference
            android:key="@string/give_favor_key"
            android:title="@string/give_favor" />
    </com.jenzz.materialpreference.PreferenceCategory>

    <SwitchPreference
        android:key="@string/advice_feedback_key"
        android:title="@string/advice_feedback" />

    <CheckBoxPreference
        android:key="@string/advice_feedback_key"
        android:title="@string/advice_feedback" />
</PreferenceScreen>