<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_group_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_item_contact"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/contact" />

    </group>

    <item android:title="@string/system">
        <menu>
            <item
                android:id="@+id/drawer_item_about"
                android:icon="@drawable/ic_favorite_black_24dp"
                android:title="@string/about" />
            <item
                android:id="@+id/drawer_item_setting"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/settings" />
        </menu>
    </item>

</menu>
